Window Command line parameters
--window-num-features (default: 72)
--window-num-predictions (default: 6)

--- a/config.env
+++ b/config.env
@@ -5,3 +5,6 @@ DATASET_DIRNAME=imp_csv
 TRAINING_PERCENTAGE=0.25
 TRAIN_TEST_RATIO=0.5
 ERROR_TYPE=MAPE
+# WINDOWS
+NUM_FEATURES=72
+NUM_PREDICTIONS=6
