--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ DATASET_DIRNAME=imp_csv
 # TRAINING
 TRAINING_PERCENTAGE=0.25
 TRAIN_TEST_RATIO=0.5
-ERROR_TYPE=MAPE
+ERROR_TYPE=MAPE2
 # WINDOWS
 NUM_FEATURES=72
 NUM_PREDICTIONS=6
