--- a/config.env
+++ b/config.env
@@ -5,6 +5,8 @@ DATASET_DIRNAME=imp_csv
 TRAINING_PERCENTAGE=0.25
 TRAIN_TEST_RATIO=0.5
 ERROR_TYPE=MAPE2
+# MODELS
+MODELS=["LR","KNN","DT","RF"]
 # WINDOWS
 NUM_FEATURES=72
 NUM_PREDICTIONS=6
