'Mode' parameter added

--- a/config.env
+++ b/config.env
@@ -2,8 +2,10 @@
 DATASET_BASEPATH=./disk
 DATASET_DIRNAME=imp_csv
 # TRAINING
-TRAINING_PERCENTAGE=0.25
-TRAIN_TEST_RATIO=0.5
+TRAINING_PERCENTAGE_HYPERPARAMETERS=0.25
+TRAINING_PERCENTAGE_FFORMA=0.5
+TRAIN_TEST_RATIO_HYPERPARAMETERS=0.5
+TRAIN_TEST_RATIO_FFORMA=0.5
 ERROR_TYPE=MAPE2
 # MODELS
 MODELS=["LR","KNN","DT","RF"]
