Default models to use

--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ TRAIN_TEST_RATIO_HYPERPARAMETERS=0.5
 TRAIN_TEST_RATIO_FFORMA=0.5
 ERROR_TYPE=MAPE2
 # MODELS
-MODELS=["LR","KNN","DT","RF", "SVR"]
+MODELS=["LR","KNN","RF","SGD","MLP"]
 # WINDOWS
 NUM_FEATURES=72
 NUM_PREDICTIONS=6
