Different parameters for training and fforma

--- a/config.env
+++ b/config.env
@@ -1,14 +1,16 @@
 # DATASET
 DATASET_BASEPATH=./disk
 DATASET_DIRNAME=imp_csv
-# TRAINING
-TRAINING_PERCENTAGE_HYPERPARAMETERS=0.25
-TRAINING_PERCENTAGE_FFORMA=0.5
-TRAIN_TEST_RATIO_HYPERPARAMETERS=0.5
-TRAIN_TEST_RATIO_FFORMA=0.5
-ERROR_TYPE=MAPE2
-# MODELS
-MODELS=["LR","KNN","RF","SGD","MLP"]
 # WINDOWS
 NUM_FEATURES=72
 NUM_PREDICTIONS=6
+# MODEL TRAINING
+TRAINING_PERCENTAGE_MODELS=0.25
+TRAIN_TEST_RATIO_MODELS=0.5
+ERROR_TYPE_MODELS=MAPE2
+MODELS_TRAINING=["LR","KNN","RF","SGD","MLP"]
+# FFORMA TRAINING
+TRAINING_PERCENTAGE_FFORMA=0.5
+TRAIN_TEST_RATIO_FFORMA=0.5
+ERROR_TYPE_FFORMA=MAPE2
+MODELS_FFORMA=["MULTI_LR","MULTI_KNN","MULTI_RF","MULTI_MLP"]
