Shift models as default for training models

--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ NUM_PREDICTIONS=6
 TRAINING_PERCENTAGE_MODELS=0.25
 TRAIN_TEST_RATIO_MODELS=0.5
 ERROR_TYPE_MODELS=MAPE2
-MODELS_TRAINING=["LR","KNN","RF","SGD","MLP"]
+MODELS_TRAINING=["SHIFT_LR","SHIFT_KNN","SHIFT_RF","SHIFT_SGD","SHIFT_MLP"]
 # FFORMA TRAINING
 TRAINING_PERCENTAGE_FFORMA=0.5
 TRAIN_TEST_RATIO_FFORMA=0.5
