--- a/config.env
+++ b/config.env
@@ -14,3 +14,7 @@ TRAINING_PERCENTAGE_FFORMA=0.5
 TRAIN_TEST_RATIO_FFORMA=0.5
 ERROR_TYPE_FFORMA=MAPE2
 MODELS_FFORMA=["MULTI_LR","MULTI_KNN","MULTI_RF","MULTI_MLP"]
+# FFORMA EVALUATION
+TRAINING_PERCENTAGE_FFORMA_EVALUATION=1
+TRAIN_TEST_RATIO_FFORMA_EVALUATION=0.5
+ERROR_TYPE_FFORMA_EVALUATION=MAPE2
