--- a/config.env
+++ b/config.env
@@ -8,12 +8,12 @@ NUM_PREDICTIONS=6
 TRAINING_PERCENTAGE_MODELS=0.25
 TRAIN_TEST_RATIO_MODELS=0.5
 ERROR_TYPE_MODELS=MAPE2
-MODELS_TRAINING=["SHIFT_LR","SHIFT_KNN","SHIFT_RF","SHIFT_SGD","SHIFT_MLP"]
+MODELS_TRAINING=["SHIFT_LR","SHIFT_KNN","SHIFT_RF","SHIFT_SGD","SHIFT_MLP", "SHIFT_SVR", "CHAIN_LR","CHAIN_KNN","CHAIN_RF","CHAIN_MLP", "CHAIN_SVR", "CHAIN_SGD", "MULTI_LR","MULTI_KNN","MULTI_RF","MULTI_MLP", "MULTI_SVR", "MULTI_SGD"]
 # FFORMA TRAINING
 TRAINING_PERCENTAGE_FFORMA=0.5
 TRAIN_TEST_RATIO_FFORMA=0.5
 ERROR_TYPE_FFORMA=MAPE2
-MODELS_FFORMA=["MULTI_LR","MULTI_KNN","MULTI_RF","MULTI_MLP"]
+MODELS_FFORMA=["MULTI_LR","MULTI_KNN","MULTI_RF","MULTI_MLP", "MULTI_SVR", "MULTI_SGD"]
 # FFORMA EVALUATION
 TRAINING_PERCENTAGE_FFORMA_EVALUATION=1
 TRAIN_TEST_RATIO_FFORMA_EVALUATION=0.5
