--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 contourpy==1.0.6
+coverage==7.2.1
 cycler==0.11.0
 Cython==3.0.0a11
 dash==2.7.0
@@ -42,11 +43,13 @@ MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+nose2==0.12.0
 numba==0.55.2
 numpy==1.22.4
 orjson==3.8.2
 packaging==21.3
 pandas==1.4.4
+parameterized==0.8.1
 parso==0.8.3
 patsy==0.5.3
 pexpect==4.8.0
