--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -9,19 +9,19 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: '3.10.10'
     - run: pip install --upgrade pip
     - run: pip install "black<23" pylint mypy isort
     - run: pip install -r requirements.txt
 
     - name: Test black
-      run: black -l79 --diff --check $(git ls-files '*.py')
+      run: black -l79 --diff --check $(git ls-files 'why_predictor/*.py')
 
     - name: Test pylint
-      run: pylint $(git ls-files '*.py')
+      run: pylint $(git ls-files 'why_predictor/*.py')
 
     - name: Test mypy
-      run: mypy --strict $(git ls-files '*.py')
+      run: mypy --strict $(git ls-files 'why_predictor/*.py')
 
     - name: Test isort
-      run: isort -l79 -c --profile black $(git ls-files '*.py')
+      run: isort -l79 -c --profile black $(git ls-files 'why_predictor/*.py')
